--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="red">#FF5151</color>
     <color name="yellow">#D9D92F</color>
     <color name="green">#11D99B</color>
+    <color name="light_grey">#E8E8E8</color>
 </resources>
