insert notes implemented

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -3,20 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nav"
-    app:startDestination="@id/splashScreenFragment">
-    <fragment
-        android:id="@+id/splashScreenFragment"
-        android:name="com.raquel.blocodenotas.SplashScreenFragment"
-        android:label="fragment_splash_screen"
-        tools:layout="@layout/fragment_splash_screen" >
-        <action
-            android:id="@+id/action_splashScreenFragment_to_listFragment3"
-            app:destination="@id/listFragment3" />
-    </fragment>
+    app:startDestination="@id/listFragment3">
     <fragment
         android:id="@+id/listFragment3"
-        android:name="com.raquel.blocodenotas.ListFragment"
-        android:label="fragment_list"
+        android:name="com.raquel.blocodenotas.fragments.ListFragment"
+        android:label="Bloco de Notas"
         tools:layout="@layout/fragment_list" >
         <action
             android:id="@+id/action_listFragment3_to_notesFragment"
@@ -24,8 +15,8 @@
     </fragment>
     <fragment
         android:id="@+id/notesFragment"
-        android:name="com.raquel.blocodenotas.NotesFragment"
-        android:label="fragment_notes"
+        android:name="com.raquel.blocodenotas.fragments.NotesFragment"
+        android:label="Nota"
         tools:layout="@layout/fragment_notes" >
         <action
             android:id="@+id/action_notesFragment_to_listFragment3"
