--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -2,11 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-            <variable
-                name="notes"
-                type="com.raquel.blocodenotas.fragments.NotesFragment" />
-    </data>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -67,6 +62,7 @@
                     android:text="Prioridade" />
 
                 <ImageView
+                    android:id="@+id/greenButton"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_margin="10dp"
@@ -74,12 +70,14 @@
                     android:src="@drawable/ic_baseline_done_24" />
 
                 <ImageView
+                    android:id="@+id/yellowButton"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_margin="10dp"
                     android:background="@drawable/yellow_shape" />
 
                 <ImageView
+                    android:id="@+id/redButton"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_margin="10dp"
