--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -66,8 +66,7 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_margin="10dp"
-                    android:background="@drawable/green_shape"
-                    android:src="@drawable/ic_baseline_done_24" />
+                    android:background="@drawable/green_shape" />
 
                 <ImageView
                     android:id="@+id/yellowButton"
