--- a/app/src/main/res/layout/item_notes.xml
+++ b/app/src/main/res/layout/item_notes.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
-        android:layout_margin="7dp">
+        android:layout_margin="7dp"
+        android:id="@+id/cardview">
 
         <View
             android:id="@+id/notesPriorityItem"
