update feature complete

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -28,8 +28,8 @@
     <fragment
         android:id="@+id/updateFragment"
         android:name="com.raquel.blocodenotas.fragments.UpdateFragment"
-        android:label="fragment_update"
-        tools:layout="@layout/fragment_update" >
+        android:label="Editar"
+        tools:layout="@layout/fragment_update">
         <action
             android:id="@+id/action_updateFragment_to_listFragment3"
             app:destination="@id/listFragment3" />
