--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -26,7 +26,8 @@
                 android:background="@drawable/edit_text_back"
                 android:fontFamily="@font/product_sans_regular"
                 android:hint="Título"
-                android:padding="15dp" />
+                android:padding="15dp"
+                android:singleLine="true"/>
 
             <EditText
                 android:id="@+id/update_subtitleEditText"
@@ -40,7 +41,8 @@
                 android:background="@drawable/edit_text_back"
                 android:fontFamily="@font/product_sans_regular"
                 android:hint="Subtítulo"
-                android:padding="15dp" />
+                android:padding="15dp"
+                android:singleLine="true"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -95,7 +97,8 @@
                 android:background="@drawable/edit_text_back"
                 android:fontFamily="@font/product_sans_regular"
                 android:hint="Nota"
-                android:padding="15dp" />
+                android:padding="15dp"
+                android:gravity="start"/>
 
         </LinearLayout>
 
@@ -107,7 +110,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:backgroundTint="@color/red"
-            android:src="@drawable/ic_baseline_done_24"
+            android:src="@drawable/ic_baseline_save"
             app:fabCustomSize="50dp" />
 
     </RelativeLayout>
